--- a/render.yaml
+++ b/render.yaml
@@ -1,6 +1,7 @@
 services:
   - type: web
-    name: bun
+    name: [GCP-Frankfurt]bun
+    region: frankfurt
     runtime: docker
     repo: https://github.com/render-examples/bun-docker
     plan: starter
