--- a/render.yaml
+++ b/render.yaml
@@ -1,6 +1,6 @@
 services:
   - type: web
-    name: [GCP-Frankfurt]bun
+    name: "[GCP-Frankfurt]bun"
     region: frankfurt
     runtime: docker
     repo: https://github.com/render-examples/bun-docker
